feat: connect and change yaml file, apply lint
