# src/constants/response-messages.ts
@@ -1,10 +1,10 @@
 export enum ResponseMessages {
-    WRONG_PASSWORD = 'Incorrect old password',
-    USER_NOT_FOUND = 'User not found',
-    ARTIST_NOT_FOUND = 'Artist not found',
-    ALBUM_NOT_FOUND = 'Album not found',
-    TRACK_NOT_FOUND = 'Track not found',
-    FAV_TRACK_NOT_FOUND = 'Favourite track not found',
-    FAV_ALBUM_NOT_FOUND = 'Favourite album not found',
-    FAV_ARTIST_NOT_FOUND = 'Favourite artist not found',
-  }
+  WRONG_PASSWORD = 'Incorrect old password',
+  USER_NOT_FOUND = 'User not found',
+  ARTIST_NOT_FOUND = 'Artist not found',
+  ALBUM_NOT_FOUND = 'Album not found',
+  TRACK_NOT_FOUND = 'Track not found',
+  FAV_TRACK_NOT_FOUND = 'Favourite track not found',
+  FAV_ALBUM_NOT_FOUND = 'Favourite album not found',
+  FAV_ARTIST_NOT_FOUND = 'Favourite artist not found',
+}
